--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,15 @@
-/ConstraintAutomata
-/DaikonTest
+/ConstraintAutomata/
+/DaikonTest/
 /ExampleMonitor.class
 /Instrumented.class
+/Patching/
 /RuntimeExceptions.class
 /SootRinner.class
 /Test1.class
+/TestPack/
+/TrapInstrumentation/
 /VariableMonitor.class
+/acteve/
 /classAnalysis.class
 /dataDependency.class
-/Patching
-/TrapInstrumentation
-/acteve
-/profile
-/TestPack
+/profile/
