String API repairing

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -5,15 +5,11 @@
 /Patching/
 /RuntimeExceptions.class
 /SootRinner.class
+/StringTest.class
 /Test1.class
 /Test2.class
 /TestPack/
 /Test_Caller.class
 /TrapInstrumentation/
-/VariableMonitor.class
-/acteve/
-/classAnalysis.class
-/dataDependency.class
-/nullPointerTestcase/
-/profile/
-/StringTest.class
+/StringRepair/
+/stringrepair/
