Flow function written => needs more testing

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -13,6 +13,7 @@
 /TrapInstrumentation/
 /VariableMonitor.class
 /acteve/
+/boundedAnalysis/
 /classAnalysis.class
 /dataDependency.class
 /dependency/
