--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/lib/jasminclasses-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/lib/polyglotclasses-1.3.5.jar"/>
-	<classpathentry kind="lib" path="C:/lib/sootclasses-2.5.0.jar" sourcepath="C:/lib/src/sootsrc-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Trap_Analyzer.jar"/>
+	<classpathentry kind="lib" path="C:/lib/soot-2.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
