--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,23 @@
-/stringrepair/
+/ConstraintAutomata/
+/DaikonTest/
+/ExampleMonitor.class
+/Instrumented.class
+/Patching/
+/RuntimeExceptions.class
+/SootRinner.class
+/StringTest.class
+/Test1.class
+/Test2.class
+/TestPack/
+/Test_Caller.class
+/TrapInstrumentation/
+/VariableMonitor.class
+/acteve/
 /boundedAnalysis/
+/classAnalysis.class
+/dataDependency.class
+/dependency/
+/nullPointerTestcase/
+/profile/
+/stringrepair/
+/trace/
