--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,18 +1,16 @@
 /ConstraintAutomata/
 /DaikonTest/
-/ExampleMonitor.class
-/Instrumented.class
 /Patching/
-/RuntimeExceptions.class
-/SootRinner.class
-/StringTest.class
-/Test1.class
-/Test2.class
 /TestPack/
-/Test_Caller.class
 /TrapInstrumentation/
-/VariableMonitor.class
 /acteve/
 /arrayrepair/
 /boundedAnalysis/
+/callGraphTrace/
 /constraintAnalysis/
+/dependency/
+/nullPointerTestcase/
+/profile/
+/stringrepair/
+/trace/
+/util/
