--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="C:/lib/polyglotclasses-1.3.5.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Trap_Analyzer.jar"/>
 	<classpathentry kind="lib" path="C:/lib/soot-2.5.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Repair_TaintAnalysis"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
