--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,18 @@
 /test/
+/.gitignore
 /ConstraintAutomata/
-/util/
+/DaikonTest/
+/Patching/
+/TestPack/
+/TrapInstrumentation/
+/acteve/
+/arrayrepair/
+/boundedAnalysis/
+/callGraphTrace/
 /constraintAnalysis/
+/dependency/
+/nullPointerTestcase/
+/profile/
+/stringrepair/
+/trace/
+/util/
