--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="C:/lib/jasminclasses-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/lib/polyglotclasses-1.3.5.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Trap_Analyzer.jar"/>
-	<classpathentry kind="lib" path="C:/lib/soot-2.5.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Repair_TaintAnalysis"/>
+	<classpathentry kind="lib" path="C:/lib/soot-2.5.0.jar" sourcepath="C:/lib/src/sootsrc-2.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
