--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="C:/lib/jasminclasses-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/lib/polyglotclasses-1.3.5.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Trap_Analyzer.jar"/>
+	<classpathentry kind="lib" path="C:/lib/ApacheLog4jbugged/log4j-core-2.0-beta9.jar"/>
+	<classpathentry kind="lib" path="C:/lib/ApacheLog4jbugged/apache-logging-log4j.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
