--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Repair_TaintAnalysis"/>
-	<classpathentry kind="lib" path="C:/lib/soot-2.5.0.jar" sourcepath="C:/lib/src/sootsrc-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/lib/jasminclasses-2.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/lib/polyglotclasses-1.3.5.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Trap_Analyzer.jar"/>
 	<classpathentry kind="lib" path="C:/lib/ApacheLog4jbugged/log4j-core-2.0-beta9.jar"/>
 	<classpathentry kind="lib" path="C:/lib/ApacheLog4jbugged/apache-logging-log4j.jar"/>
+	<classpathentry kind="lib" path="C:/lib/sootN.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
