--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,14 +1,6 @@
 /test/
-/ConstraintAutomata/
-/DaikonTest/
-/Patching/
-/TestPack/
-/TrapInstrumentation/
-/acteve/
-/arrayrepair/
-/asmbug/
-/boundedAnalysis/
-/apacheMathsBug/
-/org/
-/apacheMathBug/
+/ApacheStrutsBug/
 /constraintAnalysis/
+/util/
+/stringrepair/
+/callGraphTrace/
