Added more log information + env variables for better control

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,9 @@
 /test/
-/ApacheStrutsBug/
+/.gitignore
+/BugTestPack/
+/ConstraintAutomata/
+/DaikonTest/
+/Patching/
 /constraintAnalysis/
 /util/
-/stringrepair/
 /callGraphTrace/
-/org/
-/BugTestPack/
