--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="C:/aspectj1.6/lib/org.aspectj.matcher.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Apache soap/soap-2.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/lib/javax.mail.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Commons VFS/commons-vfs-2.0/commons-vfs2-2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
