--- a/.classpath
+++ b/.classpath
@@ -15,10 +15,6 @@
 	<classpathentry kind="lib" path="C:/lib/spring-mock-2.0.6.jar"/>
 	<classpathentry kind="lib" path="C:/lib/spring-2.0-core.jar"/>
 	<classpathentry kind="lib" path="C:/lib/org-apache-commons-logging.jar"/>
-	<classpathentry kind="lib" path="C:/aspectj1.6/lib/aspectjrt.jar"/>
-	<classpathentry kind="lib" path="C:/aspectj1.6/lib/aspectjtools.jar"/>
-	<classpathentry kind="lib" path="C:/aspectj1.6/lib/aspectjweaver.jar"/>
-	<classpathentry kind="lib" path="C:/aspectj1.6/lib/org.aspectj.matcher.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Apache soap/soap-2.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/lib/javax.mail.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Commons VFS/commons-vfs-2.0/commons-vfs2-2.0.jar"/>
@@ -27,5 +23,18 @@
 	<classpathentry kind="lib" path="C:/lib/Apache wicket/wicket-util-1.5.12.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Apache tapeesty/tapestry-core-5.2.6.jar"/>
 	<classpathentry kind="lib" path="C:/lib/Apache tapeesty/tapestry-ioc-5.2.6.jar"/>
+	<classpathentry kind="lib" path="C:/lib/javax.persistence-2.1.0-rc1.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apach juddi/juddi-core-openjpa-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Eclipse Bug lib/aspectjrt.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Eclipse Bug lib/aspectjtools.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Eclipse Bug lib/aspectjweaver.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Eclipse Bug lib/org.aspectj.matcher.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/maven-artifact-3.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/maven-model-3.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/maven-plugin-api-3.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/maven-project-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/plexus-utils-3.0.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/servicemix-common-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Apache Service mix/maven-core-3.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
