--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,19 @@
 /test/
+/.gitignore
 /BugTestPack/
+/ConstraintAutomata/
+/DaikonTest/
+/Patching/
+/TestPack/
+/TrapInstrumentation/
+/acteve/
+/arrayrepair/
+/boundedAnalysis/
+/callGraphTrace/
 /constraintAnalysis/
+/dependency/
+/nullPointerTestcase/
+/profile/
+/stringrepair/
+/trace/
 /util/
